crates/carta/tests/snapshots/golden_writer__native__common__ordered-example.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ OrderedList
    ( 1 , Example , TwoParens )
    [ [ Plain [ Str "first" ] ] , [ Plain [ Str "second" ] ] ]
]
