crates/carta/tests/snapshots/golden_writer__native__common__ordered-lower-alpha.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ OrderedList
    ( 1 , LowerAlpha , Period )
    [ [ Plain [ Str "one" ] ] , [ Plain [ Str "two" ] ] ]
]
