crates/carta/tests/snapshots/golden_writer__native__common__ordered-nested.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ OrderedList
    ( 1 , Decimal , Period )
    [ [ Para [ Str "outer" ]
      , OrderedList
          ( 1 , Decimal , Period )
          [ [ Plain [ Str "inner" , Space , Str "one" ] ]
          , [ Plain [ Str "inner" , Space , Str "two" ] ]
          ]
      ]
    ]
]
