crates/carta/tests/snapshots/golden_writer__native__common__ordered-period.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ OrderedList
    ( 1 , Decimal , Period )
    [ [ Plain [ Str "one" ] ] , [ Plain [ Str "two" ] ] ]
]
