crates/carta/tests/snapshots/golden_writer__native__common__ordered-start.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ OrderedList
    ( 5 , Decimal , Period )
    [ [ Plain [ Str "five" ] ] , [ Plain [ Str "six" ] ] ]
]
