crates/carta/tests/snapshots/golden_writer__native__common__ordered-upper-alpha.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "A."
    , Space
    , Str "one"
    , SoftBreak
    , Str "B."
    , Space
    , Str "two"
    ]
]
