crates/carta/tests/snapshots/golden_writer__native__common__ordered-upper-roman.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "I."
    , Space
    , Str "one"
    , SoftBreak
    , Str "II."
    , Space
    , Str "two"
    ]
]
